- fixes for java 11-> 1.8 - change db settings - delete profiles